[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "testing_releases"
version = "0.1.0"
description = "Just a test repo for me to test releases on."
authors = ["Bilbottom"]
readme = "README.md"
packages = [{include = "testing_releases"}]

[tool.poetry.scripts]
testing-releases = 'testing_releases:main'

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.test.dependencies]
pre-commit = "^3.0.0"
pytest = "^7.0.0"
pytest-cov = "^4.0.0"


[tool.pytest.ini_options]
addopts = "--cov=src"
testpaths = ["tests"]


[tool.isort]
profile = "black"


[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
commit_message = "chore(release): {version}"
major_on_zero = false  # For development only, remove after v1.0.0

[tool.semantic_release.changelog]
exclude_commit_patterns = ["^\\[pre-commit\\.ci\\].*"]

[tool.semantic_release.branches.main]
match = "main"
prerelease_token = "rc"
prerelease = false

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore",
    "docs",
    "feat",
    "fix",
    "perf",
    "refactor",
    "style",
    "test",
]
major_tags = [":boom:"]
minor_tags = ["feat", ":sparkles:"]
patch_tags = ["fix", "perf"]
