[project]
name = "testing_releases"
version = "0.2.0"
description = "Just a test repo for me to test releases on."
authors = [{name = "Bilbottom"}]
readme = "README.md"
packages = [{include = "testing_releases"}]
requires-python = ">=3.11"
dynamic = ["dependencies"]

[project.scripts]
testing-releases = 'testing_releases:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group]
dev.optional = false
test.optional = false

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"


[tool.pytest.ini_options]
addopts = "--cov=testing_releases"
testpaths = ["tests"]


[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
commit_message = "chore(release): {version}"
major_on_zero = false  # For development only, remove after v1.0.0

[tool.semantic_release.changelog]
exclude_commit_patterns = [
    "^\\d\\.\\d\\.\\d",  # The default semantic release pattern
    "^\\[pre-commit\\.ci\\]",  # Pre-commit CI commits
    "^(Revert|Merge)",  # Revert and merge commits
]

[tool.semantic_release.branches.main]
match = "main"
prerelease_token = "rc"
prerelease = false

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore",
    "docs",
    "feat",
    "fix",
    "perf",
    "refactor",
    "style",
    "test",
]
major_tags = [":boom:"]
minor_tags = ["feat", ":sparkles:"]
patch_tags = ["fix", "perf"]
