[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "testing_releases"
version = "0.3.1"
description = "Just a test repo for me to test releases on."
authors = [{name = "billwallis"}]
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies"]

[project.scripts]
testing-releases = 'testing_releases:main'


[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
include = ["testing_releases"]


[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true


[tool.pytest.ini_options]
addopts = "--cov=testing_releases"
testpaths = ["tests"]


[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
commit_message = "chore(release): {version}"
major_on_zero = false  # For development only, remove after v1.0.0

[tool.semantic_release.changelog]
exclude_commit_patterns = [
    "^\\d\\.\\d\\.\\d",  # The default semantic release pattern
    "^\\[pre-commit\\.ci\\]",  # Pre-commit CI commits
    "^(Revert|Merge)",  # Revert and merge commits
]

[tool.semantic_release.branches.main]
match = "main"
prerelease_token = "rc"
prerelease = false

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore",
    "docs",
    "feat",
    "fix",
    "perf",
    "refactor",
    "style",
    "test",
]
major_tags = [":boom:"]
minor_tags = ["feat", ":sparkles:"]
patch_tags = ["fix", "perf"]
